页面修改汉化，支持聊天记录调取

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>斯里兰卡OL</title>
         <!-- 引入socket.io -->
         <script src="/socket.io/socket.io.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
@@ -12,25 +12,24 @@
     </head>
     <body>
         <nav>
-            <span style="position:relative;top:10px;">Sri Lanka OL</span>
+            <span style="position:relative;top:10px;">斯里兰卡OL</span>
 
             <input id="bmenub" type="checkbox" class="show">
-            <label for="bmenub" class="burger pseudo button">Menu</label>
+            <label for="bmenub" class="burger pseudo button">菜单</label>
 
             <div class="menu">
-                <a href="#" class="pseudo button" id="admin_btn" onclick="click_admin()">Admin</a>
-                <a href="#" class="pseudo button" onclick="click_chat()">Chat</a>
-                <a href="#" class="pseudo button" onclick="click_map()">Map</a>
-                <a href="#" class="pseudo button" onclick="click_stat()">Stat</a>
-                <a href="#" class="button" id="setid_btn" onclick="click_setid()">Set ID</a>
+                <a href="#" class="pseudo button" id="admin_btn" onclick="click_admin()">管理员</a>
+                <a href="#" class="pseudo button" onclick="click_chat()">主页</a>
+                <a href="#" class="pseudo button" onclick="click_map()">地图</a>
+                <a href="#" class="button" id="setid_btn" onclick="click_setid()">设置ID</a>
             </div>
         </nav>
         <main style="position:absolute;left:0;right:0;top:50px;bottom:0;">
             <div class="flex two chat">
                 <div class="chat_user_list">
                 </div>
-                <div class="chat_main">
-                    <pre class="chat_history" style="height:80%;overflow-y: auto;white-space:normal">
+                <div class="chat_main" style="max-height: 500px;">
+                    <pre class="chat_history" style="max-height:100%;overflow-y: auto;white-space:normal">
                     </pre>
                     <div class="chat_send_area">
                         <input class="chat_content">
@@ -38,11 +37,17 @@
                     </span>
                     </div>
                 </div>
+                <div class="stat">
+                    <em>统计信息：</em><br>
+                    <div class="stat_data">
+                        瘦肉：123<br>
+                        鸟蛋：321<br>
+                        铁：321<br>
+                        兵力：114514<br>
+                    </div>
+                </div>
             </div>
             <div class="map">
-                    123
-            </div>
-            <div class="stat">
                     123
             </div>
             <div class="admin">
